[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cyphera-keychain"
version = "0.1.0"
description = "Key provider abstraction for Cyphera encryption SDKs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Cyphera", email = "sdk@cyphera.dev" }]
keywords = ["cyphera", "encryption", "key-management", "fpe"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://github.com/cyphera-labs/keychain-python"

[tool.pytest.ini_options]
testpaths = ["tests"]
